# NeuralBottlesCBN

./: .dockerignore  .gitignore  Dockerfile  README.md  README_GPIO.md  context.md  docker-compose.yaml  install_gpio_rules.sh  setup_podman.sh
ws_cpp/: CMakeLists.txt
ws_cpp/config/: config_cam0.yaml  config_cam2.yaml  config_cam3.yaml  imgui.ini  inference.yaml  labels.yaml
ws_cpp/include/: cbn_detector.hpp  cbn_detector_inference.hpp  cbn_io.h  pipeline.h
ws_cpp/src/: cbn_detector_inference.cpp  laboratorio_cbn.cpp  main.cpp  pipeline.cpp  test_gpio.cpp
ws_cpp/test/: camera_test.cpp  test_inference.cpp
ws_py/: cbn_dataset.yaml  export_int8.py  prepare_dataset.py  requirements.txt  requirements_base.txt  train.py
ws_py/test/: test_env.py
